connected admin dashboard

--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
+<div class="h2">{{name}}</div>
 <div class="wrapper scrollme">
     <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
         <thead style="background-color: #adb0c5;">
