admin-login frontend modification

--- a/banking-frontend-angular/src/app/admin-login/admin-login.component.html
+++ b/banking-frontend-angular/src/app/admin-login/admin-login.component.html
@@ -25,7 +25,8 @@
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Login" style="width: 100%;">
         </div>
-        <p>Forgot Admin ID? <a href="">Click here</a>.</p>
-        <p>Forgot Password? <a href="">Click here</a>.</p>
+        <!-- <p>Forgot Admin ID? <a href="">Click here</a>.</p>
+        <p>Forgot Password? <a href="">Click here</a>.</p> -->
     </form>
+    <!-- <div *ngIf="error">{{message}}</div> -->
 </div>
