--- a/banking-frontend-angular/src/app/admin-login/admin-login.component.html
+++ b/banking-frontend-angular/src/app/admin-login/admin-login.component.html
@@ -8,7 +8,7 @@
     <form (ngSubmit)="adminLoginForm.valid && loginCheck()" #adminLoginForm="ngForm">
         <div class="form-group">
             <label>Admin ID</label>
-            <input class="form-control" type="text" name="id" placeholder="Your 5-digit admin id" [(ngModel)]=adminLogin.id #id="ngModel" required pattern="^[0-9]{5}$">
+            <input class="form-control" type="text" name="id" placeholder="Your 5-digit admin id" [(ngModel)]="adminLogin.adminId" #id="ngModel" required pattern="^[0-9]{5}$">
             <div class="alert alert-danger" *ngIf="adminLoginForm.submitted && id.invalid && (id.dirty || id.touched)">
                 <div *ngIf="id.errors.required">Admin ID is required</div>
                 <div *ngIf="id.errors.pattern">Admin ID must be of 5 digits</div>
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input class="form-control" type="password" name="pwd" placeholder="Your password" [(ngModel)]=adminLogin.password
+            <input class="form-control" type="password" name="pwd" placeholder="Your password" [(ngModel)]="adminLogin.password"
                 #pwd="ngModel" required>
             <div class="alert alert-danger" *ngIf="adminLoginForm.submitted && pwd.invalid && (pwd.dirty || pwd.touched)">
                 <div *ngIf="pwd.errors.required">Password is required</div>
