--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.css
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.css
@@ -23,8 +23,8 @@ a:hover {
     text-decoration: none;
 }
 
-input[type="text"], input[type="password"], input[type = "number"] {
-    border: 1px solid #428BCA;
+input{
+  border: 1px solid #428BCA;
 }
 
 .forgot-options{
