--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.html
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.html
@@ -9,22 +9,22 @@
 </div>
 <div class="wrapper container center">
     <p class="h3">Register for Internet Banking</p>
-    <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
-        <!-- <div class="form-group">
+    <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" [appMustMatch]="['userPassword', 'cuserPassword' ,'txPassword', 'ctxPassword']" #f="ngForm">
+        <div class="form-group">
             <label> Account Number</label>
             <input input type="number" class="form-control" name="accountNumber"
-           [(ngModel)]="register.accountNumber"
+           [(ngModel)]="model.accountNumber"
             #accountNumber="ngModel" [ngClass]="{ 'is-invalid': f.submitted && accountNumber.invalid }"
-            required placeholder="Your Account Number" minlength="6" maxlength="6">
+            required placeholder="Your Account Number" minlength="7" maxlength="7">
             <div *ngIf="f.submitted && accountNumber.invalid" class="invalid-feedback">
-                <div *ngIf="accountNumber.errors.required">Aadhaar Number is required</div>
+                <div *ngIf="accountNumber.errors.required">Account Number is required</div>
                 <div *ngIf="accountNumber.errors.minlength || accountNumber.errors.maxlength">Enter Valid Account Number</div>
             </div>
         </div>
         <div class="form-group">
             <label> Set Login Password</label>
             <input class="form-control" type="password" name="userPassword" 
-            placeholder="Enter Password" [(ngModel)]="register.userPassword" #loginPassword="ngModel"
+            placeholder="Enter Password" [(ngModel)]="model.userPassword" #userPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8">
             <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
                 <div *ngIf="userPassword.errors.required">Password is required</div>
@@ -34,9 +34,9 @@
         <div class="form-group">
             <label> Confirm Login Password</label>
             <input class="form-control" type="password" name="cuserPassword" 
-            placeholder="Enter Password" [(ngModel)]="register.cuserPassword" #cuserPassword="ngModel"
+            placeholder="Enter Password" [(ngModel)]="model.cuserPassword"  #cuserPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && cuserPassword.invalid }" required>
-            <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
+            <div *ngIf="f.submitted && cuserPassword.invalid" class="invalid-feedback">
                 <div *ngIf="cuserPassword.errors.required">Confirm Password is required</div>
                 <div *ngIf="cuserPassword.errors.mustMatch">Passwords must match</div>
             </div>
@@ -44,7 +44,7 @@
         <div class="form-group">
             <label> Set Transaction Password</label>
             <input class="form-control" type="password" name="txPassword" 
-            placeholder="Enter Password" [(ngModel)]="register.transactionPassword" #txPassword="ngModel"
+            placeholder="Enter Password" [(ngModel)]="model.transactionPassword" #txPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && txPassword.invalid }" required minlength="4">
             <div *ngIf="f.submitted && txPassword.invalid" class="invalid-feedback">
                 <div *ngIf="txPassword.errors.required">Password is required</div>
@@ -54,22 +54,22 @@
         <div class="form-group">
             <label> Confirm Transaction Password</label>
             <input class="form-control" type="password" name="ctxPassword" 
-            placeholder="Enter Password" [(ngModel)]="register.ctransactionPassword" #ctxPassword="ngModel"
+            placeholder="Enter Password" [(ngModel)]="model.ctxPassword"  #ctxPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && ctxPassword.invalid }" required>
             <div *ngIf="f.submitted && ctxPassword.invalid" class="invalid-feedback">
                 <div *ngIf="ctxPassword.errors.required">Confirm Password is required</div>
                 <div *ngIf="ctxPassword.errors.mustMatch">Passwords must match</div>
             </div>
-        </div> -->
-        <!-- <div class="form-group">
+        </div>
+        <div class="form-group">
             <label> Enter OTP</label>
-            <input formControlName="otp" class="form-control" type="number" name="otp">
-        </div> -->
+            <input class="form-control" type="number" name="otp" placeholder="Enter  OTP">
+        </div>
 
         <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
     </form>
     <!-- <p>Register for Internet Banking <a href="">here</a>.</p> -->
     <div class="forgot-options">
-        <p>Already have an account? <a href="">Click here</a> to Login</p>
+        <p>Already have an account? <a href="#" routerLink="/home">Click here</a> to Login</p>
     </div>
 </div>
