admin approval working

--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,51 +1,88 @@
-<div class="h2">{{name}}</div>
+<div class="text-center">
+  <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
+</div>
+<div class="h4">Welcome, {{name}}</div>
+<div *ngIf="error">{{message}}</div>
 <div class="wrapper scrollme">
-    <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
-        <thead style="background-color: #adb0c5;">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Service Reference No</th>
-            <th scope="col">Title</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Middle Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Father Name</th>
-            <th scope="col">Mobile Number</th>
-            <th scope="col">Email ID</th>
-            <th scope="col">Aadhaar Card Number</th>
-            <th scope="col">Date of Birth</th>
-            <th scope="col">Residential Address</th>
-            <th scope="col">Permanent Address</th>
-            <th scope="col">Occupation</th>
-            <th scope="col">Source of Income</th>
-            <th scope="col">Gross Annual Income</th>
-            <th scope="col">Internet Banking Choice</th>
-            <th scope="col">Accept </th>
-            <th scope="col">Reject</th>
-          </tr>
-        </thead>
-        <!-- <tbody>
-          <tr *ngFor="let customer of customers; let i = index">
-            <th scope="row">{{i + 1}}</th>
-            <td>{{customer.serviceRefNo}}</td>
-            <td>{{customer.title}}</td>
-            <td>{{customer.firstName}}</td>
-            <td>{{customer.middleName}}</td>
-            <td>{{customer.lastName}}</td>
-            <td>{{customer.fatherName}}</td>
-            <td>{{customer.mobileNo}}</td>
-            <td>{{customer.emailId}}</td>
-            <td>{{customer.aadhaarNo}}</td>
-            <td>{{customer.dateOfBirth}}</td>
-            <td id="resAdd">Residential address</td>
-            <td id="perAdd">Permannet Address</td>
-            <td>{{customer.occupationType}}</td>
-            <td>{{customer.sourceOfIncome}}</td>
-            <td>{{customer.grossAnnualIncome}}</td>
-            <td>{{customer.netBankingRequirement}}</td>
-            <td><button class="btn btn-success" (click)="accept(customer.serviceRefNo)">Accept</button></td>
-            <td><button class="btn btn-danger" (click)="reject(customer.serviceRefNo)">Reject</button> </td>
-          </tr>
-        </tbody> -->
-      </table>
+  <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
+    <thead style="background-color: #adb0c5;">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Service Reference No</th>
+        <th scope="col">Title</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Middle Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Father's Name</th>
+        <th scope="col">Mobile Number</th>
+        <th scope="col">Email ID</th>
+        <th scope="col">Aadhaar Card Number</th>
+        <th scope="col">Date of Birth</th>
+        <th scope="col">Occupation</th>
+        <th scope="col">Source of Income</th>
+        <th scope="col">Gross Annual Income</th>
+        <th scope="col">Address Line 1</th>
+        <th scope="col">Address Line 2</th>
+        <th scope="col">Landmark</th>
+        <th scope="col">State</th>
+        <th scope="col">City</th>
+        <th scope="col">Pincode</th>
+        <th scope="col">Internet Banking Requirement</th>
+        <th scope="col">Debit Card Requirement</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let customer of customerRequestStatus.customers; let i = index">
+        <th scope="row">{{i + 1}}</th>
+        <td>{{customer.serviceRefNo}}</td>
+        <td>{{customer.title}}</td>
+        <td>{{customer.firstName}}</td>
+        <td>{{customer.middleName}}</td>
+        <td>{{customer.lastName}}</td>
+        <td>{{customer.fatherName}}</td>
+        <td>{{customer.mobileNo}}</td>
+        <td>{{customer.emailId}}</td>
+        <td>{{customer.aadhaarNo}}</td>
+        <td>{{customer.dateOfBirth}}</td>
+        <td>{{customer.occupationType}}</td>
+        <td>{{customer.sourceOfIncome}}</td>
+        <td>{{customer.grossAnnualIncome}}</td>
+        <td>{{customer.perAddress.addressLine1}}</td>
+        <td>{{customer.perAddress.addressLine2}}</td>
+        <td>{{customer.perAddress.landmark}}</td>
+        <td>{{customer.perAddress.state}}</td>
+        <td>{{customer.perAddress.city}}</td>
+        <td>{{customer.perAddress.pincode}}</td>
+        <td>{{customer.netBankingRequirement}}</td>
+        <td>{{customer.debitCardRequirement}}</td>
+        <!-- <td><button class="btn btn-success" (click)="accept(customer.serviceRefNo)">Accept</button></td>
+            <td><button class="btn btn-danger" (click)="reject(customer.serviceRefNo)">Reject</button> </td> -->
+      </tr>
+    </tbody>
+  </table>
+</div>
+<br>
+<div class="wrapper container">
+  <form class="form-group row" (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
+    <label class="col-sm-2 col-form-label" for="refNo">Service Reference No</label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" name="refNo" #refNo="ngModel" [(ngModel)]="adminApproval.serviceRefNo"
+        required pattern="^[0-9]{4}$">
+      <div class="alert alert-danger" *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
+        <div *ngIf="refNo.errors.required">Service Reference No. is required</div>
+        <div *ngIf="refNo.errors.pattern">Service Reference No. must be of 4 digits</div>
+      </div>
+    </div>
+    <label class="col-sm-2 col-form-label" for="response">Accept(Y) / Reject(N)</label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" name="response" #response="ngModel" [(ngModel)]="adminApproval.response"
+        required pattern="[YN]">
+      <div class="alert alert-danger"
+        *ngIf="approvalForm.submitted && response.invalid && (response.dirty || response.touched)">
+        <div *ngIf="response.errors.required">Approval is required</div>
+        <div *ngIf="response.errors.pattern">Enter Y or N</div>
+      </div>
+      <input type="submit" class="btn btn-primary" value="Approve">
+    </div>
+  </form>
 </div>
