view beneficiary integration completed

--- a/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
@@ -12,9 +12,9 @@
       <tbody>
         <tr *ngFor="let beneficiary of beneficiaries; let i = index">
           <th scope="row">{{i + 1}}</th>
-          <td>{{beneficiary.name}}</td>
-          <td>{{beneficiary.accountNumber}}</td>
-          <td>{{beneficiary.nickName}}</td>
+          <td>{{beneficiary.beneficiaryName}}</td>
+          <td>{{beneficiary.accountNo}}</td>
+          <td>{{beneficiary.beneficiaryNickName}}</td>
         </tr>
       </tbody>
     </table>
