admin approval updated, track application done

--- a/banking-frontend-angular/src/app/admin-login/admin-login.component.html
+++ b/banking-frontend-angular/src/app/admin-login/admin-login.component.html
@@ -28,5 +28,5 @@
         <!-- <p>Forgot Admin ID? <a href="">Click here</a>.</p>
         <p>Forgot Password? <a href="">Click here</a>.</p> -->
     </form>
-    <div *ngIf="error">{{message}}</div>
+    <div class="alert alert-danger" *ngIf="error">{{message}}</div>
 </div>
