--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="h4">Welcome, {{name}}</div>
 <div *ngIf="error">{{message}}</div>
-<div class="wrapper scrollme">
+<div class="scrollme">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
     <thead style="background-color: #adb0c5;">
       <tr>
@@ -62,10 +62,12 @@
   </table>
 </div>
 <br>
-<div class="wrapper container">
-  <form class="form-group row" (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
-    <label class="col-sm-2 col-form-label" for="refNo">Service Reference No</label>
-    <div class="col-sm-10">
+<div class="wrapper container" style="width: 20%;">
+  <p class="h3">Admin Approval</p>
+  <br>
+  <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
+    <div class="form-group">
+      <label for="refNo">Service Reference No</label>
       <input class="form-control" type="text" name="refNo" #refNo="ngModel" [(ngModel)]="adminApproval.serviceRefNo"
         required pattern="^[0-9]{4}$">
       <div class="alert alert-danger" *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
@@ -73,8 +75,8 @@
         <div *ngIf="refNo.errors.pattern">Service Reference No. must be of 4 digits</div>
       </div>
     </div>
-    <label class="col-sm-2 col-form-label" for="response">Accept(A) / Reject(R)</label>
-    <div class="col-sm-10">
+    <div class="form-group">
+      <label for="response">Accept(A) / Reject(R)</label>
       <input class="form-control" type="text" name="response" #response="ngModel" [(ngModel)]="adminApproval.response"
         required pattern="[AR]">
       <div class="alert alert-danger"
@@ -82,6 +84,8 @@
         <div *ngIf="response.errors.required">Approval is required</div>
         <div *ngIf="response.errors.pattern">Enter A or R</div>
       </div>
+    </div>
+    <div class="form-group">
       <input type="submit" class="btn btn-primary" value="Approve">
     </div>
   </form>
