--- a/banking-frontend-angular/src/app/track-application/track-application.component.html
+++ b/banking-frontend-angular/src/app/track-application/track-application.component.html
@@ -4,7 +4,7 @@
 <div class="wrapper container" style="width: 28%;">
     <p class="h3">Track Application</p>
     <br>
-    <form (ngSubmit)="trackApplicationForm.valid && onSubmit()" #trackApplicationForm="ngForm">
+    <form (ngSubmit)="trackApplicationForm.valid && checkApplicationStatus()" #trackApplicationForm="ngForm">
         <div class="form-group ">
             <label>Service Reference Number</label>
             <input class="form-control" type="text" name="adminId" placeholder="Your 4-digit service reference number"
@@ -21,17 +21,16 @@
     </form>
 </div><br>
 <div class="h2" style="text-align: center;" *ngIf="submitted">
-    <div *ngIf="approved == 'Y'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated bg-success"
-        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 42%">
-        Hurray! Your application is approved.
+    <div *ngIf="status == 'A'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated bg-success"
+        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 46%">
+        Wohoo! Your application was approved.
     </div>
-    <div *ngIf="approved == 'P'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated"
-        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 86%" #notApproved>Your
-        application is pending for approval.
-        You will be notified once approved.
+    <div *ngIf="status == 'W'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated"
+        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 94%" #notApproved>Hold tight! Your application is pending for approval. You will be notified once approved.
     </div>
-    <div *ngIf="approved == 'N'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated bg-danger"
-        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 36%">
-        Your application is rejected.
+    <div *ngIf="status == 'R'" class="mx-auto progress-bar progress-bar-striped progress-bar-animated bg-danger"
+        role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 94%">
+        Oh no! Your application was rejected.
     </div>
+    <div class="alert alert-warning" role="alert" *ngIf="error">{{statusMessag}}</div>
 </div>
