user profile done

--- a/banking-frontend-angular/src/app/logout/logout.component.html
+++ b/banking-frontend-angular/src/app/logout/logout.component.html
@@ -10,7 +10,6 @@
     <div class="h5">Thank you for banking with us.</div>
     <br>
     <div style="margin-bottom: 3%;">
-        <a href="login.html"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
-        <a href="home.html"><button class="btn btn-success" type="submit">Back to Home</button></a>
+        <a [routerLink]="['/home']"><button class="btn btn-primary" type="submit">Back to Home</button></a>
     </div>
 </div>
