--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="text-center">
   <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
-<div class="h4">Welcome, {{name}}</div>
+<div class="h4">Welcome, {{name | uppercase}}</div>
 <div *ngIf="error">{{message}}</div>
 <div class="scrollme">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
