--- a/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
@@ -27,4 +27,5 @@
             <input type="submit" class="btn" value="Add" style="width: 100%;">
         </div>
     </form>
+    <div *ngIf="error">{{message}}</div>
 </div>
