--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -4,6 +4,7 @@
         <a href="#" routerLink="/home">Home</a>
         <a href="#" routerLink="/register-ib">Register for Internet Banking</a>
         <a href="#" routerLink="/open-acc">Apply for Account</a>
+        <a href="#" routerLink="/track-application">Track</a>
         <a href="#" routerLink="/admin-login">Admin Login</a>
     </div>
 </div>
