--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
             <li [routerLink]="['/user-profile']">User Profile</li>
             <li [routerLink]="['/account-summary']">Account Summary</li>
             <li [routerLink]="['/account-statement']">Account Statement</li>
-            <li>Fund Transfer</li>
+            <li [routerLink]="['/fund-transfer']">Fund Transfer</li>
             <li [routerLink]="['/add-beneficiary']">Add Beneficiary</li>
             <li [routerLink]="['/view-beneficiary']">Saved Beneficiaries</li>
         </ul>
