--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -1,77 +1,166 @@
 <!-- <div class="text">
-    <h3>
-        Fund Transfer
-    </h3>
-  </div>
-  <div class="wrapper">
+  <h3>
+    Fund Transfer
+  </h3>
+</div>
+<div class="wrapper">
   <div class="card" style="width:60%">
-    <form class="form"  #transaction="ngForm" (ngSubmit)="send(transaction)">
-      <div class="form-group row" >
-        <label for="From_Account" class="col-sm-4 col-form-label">From Account <span style="color:red" >*</span></label>
+    <form class="form" #transaction="ngForm" (ngSubmit)="send(transaction)">
+      <div class="form-group row">
+        <label for="From_Account" class="col-sm-4 col-form-label">From Account <span style="color:red">*</span></label>
         <div class="col-sm3">
-          <input type="text" class="form-control" id="To_Account"  [value]="AccNo" disabled>
+          <input type="text" class="form-control" id="To_Account" [value]="AccNo" disabled>
         </div>
       </div>
-      
+
       <div class="form-group row">
-        <label for="To_Account" class="col-sm-4 col-form-label">To Account <span style="color:red" >*</span></label>
+        <label for="To_Account" class="col-sm-4 col-form-label">To Account <span style="color:red">*</span></label>
         <div class="btn-group">
-          <select class="form-control" name="beneficiary" ngModel > 
-            <option [value] = "addto[1]" *ngFor = "let addto of add">{{addto[0]}}</option>
-        </select>
-         
+          <select class="form-control" name="beneficiary" ngModel>
+            <option [value]="addto[1]" *ngFor="let addto of add">{{addto[0]}}</option>
+          </select>
+
         </div>
         <div style="margin-left:10px">
-      <a routerLink = "/addbeneficiary">  <button type="button" class="btn btn-primary"  >Add Beneficiary </button> </a>
+          <a routerLink="/addbeneficiary"> <button type="button" class="btn btn-primary">Add Beneficiary </button> </a>
         </div>
       </div>
       <div class="form-group row">
-          <label for="Amount" class="col-sm-4 col-form-label">Amount <span style="color:red" >*</span></label>
-          <div class="col-sm3">
-            <input type="number" class="form-control" placeholder="Enter The Amount" name="amount" ngModel>
-          </div>
+        <label for="Amount" class="col-sm-4 col-form-label">Amount <span style="color:red">*</span></label>
+        <div class="col-sm3">
+          <input type="number" class="form-control" placeholder="Enter The Amount" name="amount" ngModel>
+        </div>
       </div>
       <div class="error-messages">
         <ng-container *ngFor="let error of error_messages.lname">
-            <div class="error-message" *ngIf="loginForm.get('lname').hasError(error.type) && (loginForm.get('lname').dirty || loginForm.get('lname').touched)">
-                {{ error.message }}
-            </div>
+          <div class="error-message"
+            *ngIf="loginForm.get('lname').hasError(error.type) && (loginForm.get('lname').dirty || loginForm.get('lname').touched)">
+            {{ error.message }}
+          </div>
         </ng-container>
-    </div>
-  
-      <div class="form-group row">
-          <label class="col-sm-4 col-form-label">Transaction Type <span style="color:red" >*</span></label>
-          <div class="btn-group">
-            <select class="form-control" name="transactionType" ngModel>
-              <option value="NEFT">NEFT</option>
-              <option value="IMPS">IMPS</option>
-              <option value="RTGS">RTGS</option>
-          </select> 
-          </div>
       </div>
-  
-      
-  
+
       <div class="form-group row">
-      <label for="Remarks" class="col-sm-4 col-form-label">Transaction Password<span style="color:red" >*</span></label>
-          <div class="col-sm3">
-              <input type="password" class="form-control" placeholder="Enter Pin" name="pin" ngModel>
-          </div>
+        <label class="col-sm-4 col-form-label">Transaction Type <span style="color:red">*</span></label>
+        <div class="btn-group">
+          <select class="form-control" name="transactionType" ngModel>
+            <option value="NEFT">NEFT</option>
+            <option value="IMPS">IMPS</option>
+            <option value="RTGS">RTGS</option>
+          </select>
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label for="Remarks" class="col-sm-4 col-form-label">Transaction Password<span
+            style="color:red">*</span></label>
+        <div class="col-sm3">
+          <input type="password" class="form-control" placeholder="Enter Pin" name="pin" ngModel>
+        </div>
       </div>
       <div class="error-messages">
         <ng-container *ngFor="let error of error_messages.rname">
-            <div class="error-message" *ngIf="loginForm.get('rname').hasError(error.type) && (loginForm.get('rname').dirty || loginForm.get('rname').touched)">
-                {{ error.message }}
-            </div>
+          <div class="error-message"
+            *ngIf="loginForm.get('rname').hasError(error.type) && (loginForm.get('rname').dirty || loginForm.get('rname').touched)">
+            {{ error.message }}
+          </div>
         </ng-container>
-    </div>
-  
-    <div id="mydiv">
-      <button type="submit" class="btn btn-primary">Transfer</button>
-    </div>
-  
+      </div>
+
+      <div id="mydiv">
+        <button type="submit" class="btn btn-primary">Transfer</button>
+      </div>
+
     </form>
-      
+
   </div>
-  </div>
- -->
+</div> -->
+<app-dashboard></app-dashboard>
+<div class="wrapper container center">
+  <p class="h3">Fund Transfer</p>
+  <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
+    <div class="form-group row">
+      <label class="col-sm-4"> Transaction Type<span style="color:red">*</span> </label>
+      <div class="col-sm-8">
+        <select [(ngModel)]="transaction.transactionType" class="form-control" name="transactionType"
+          #transactionType="ngModel" [ngClass]="{ 'is-invalid': f.submitted && transactionType.invalid }" required>
+          <option value=""></option>
+          <option value="IMPS"> IMPS </option>
+          <option value="NEFT"> NEFT </option>
+          <option value="RTGS"> RTGS </option>
+        </select>
+        <div *ngIf="f.submitted && transactionType.invalid" class="invalid-feedback">
+          <div *ngIf="transactionType.errors.required">Title is required</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> From Account <span style="color:red">*</span></label>
+      <div class="col-sm-8">
+        <select [(ngModel)]="transaction.userId" class="form-control" name="userId" #userId="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && userId.invalid }" required>
+          <option value=""></option>
+          <option value={{accountSummaryStatus.accountNumber}}> {{accountSummaryStatus.accountNumber}} </option>
+        </select>
+        <div *ngIf="f.submitted && userId.invalid" class="invalid-feedback">
+          <div *ngIf="userId.errors.required">Title is required</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> To Account Number<span style="color:red">*</span></label>
+      <div class="col-sm-8">
+        <select [(ngModel)]="transaction.toAccountNumber" class="form-control" name="toAccountNumber"
+          #toAccountNumber="ngModel" [ngClass]="{ 'is-invalid': f.submitted && toAccountNumber.invalid }" required>
+          <option value=""></option>
+          <option *ngFor="let beneficiary of beneficiaries" value={{beneficiary.accountNo}}>{{beneficiary.accountNo}} :
+            {{beneficiary.beneficiaryName}} </option>
+        </select>
+        <div *ngIf="f.submitted && toAccountNumber.invalid" class="invalid-feedback">
+          <div *ngIf="toAccountNumber.errors.required">Title is required</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> Amount<span style="color:red">*</span></label>
+      <div class="col-sm-8">
+        <input type="number" class="form-control" name="amount" placeholder="Enter Amount"
+          [(ngModel)]="transaction.amount" #amount="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && amount.invalid }">
+        <div *ngIf="f.submitted && amount.invalid" class="invalid-feedback">
+          <div *ngIf="amount.errors.type">Amount must be a number</div>
+          <div *ngIf="amount.errors.required">Amount is required</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> Remarks</label>
+      <div class="col-sm-8">
+        <input type="text" class="form-control" name="remarks" placeholder="Enter Remarks"
+          [(ngModel)]="transaction.remarks" #remarks="ngModel">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> Transaction Password<span style="color:red">*</span></label>
+      <div class="col-sm-8">
+        <input class="form-control" type="password" name="txPassword" placeholder="Enter Transaction Password"
+          [(ngModel)]="transaction.transactionPassword" #txPassword="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && txPassword.invalid }" required minlength="4">
+        <div *ngIf="f.submitted && txPassword.invalid" class="invalid-feedback">
+          <div *ngIf="txPassword.errors.required">Password is required</div>
+          <div *ngIf="txPassword.errors.minlength">Password must be at least 4 characters</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-4"> Enter OTP</label>
+      <div class="col-sm-8">
+        <input class="form-control" type="number" name="otp" placeholder="Enter  OTP">
+      </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
+  </form>
+</div>
