--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -99,13 +99,13 @@
     <div class="form-group row">
       <label class="col-sm-4"> From Account <span style="color:red">*</span></label>
       <div class="col-sm-8">
-        <select [(ngModel)]="transaction.userId" class="form-control" name="userId" #userId="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && userId.invalid }" required>
+        <select [(ngModel)]="transaction.fromAccountNumber" class="form-control" name="fromAccountNumber" #fromAccountNumber="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && fromAccountNumber.invalid }" required>
           <option value=""></option>
-          <option value={{accountSummaryStatus.accountNumber}}> {{accountSummaryStatus.accountNumber}} </option>
+          <option value="{{accountSummaryStatus.accountNumber}}"> {{accountSummaryStatus.accountNumber}} </option>
         </select>
-        <div *ngIf="f.submitted && userId.invalid" class="invalid-feedback">
-          <div *ngIf="userId.errors.required">Title is required</div>
+        <div *ngIf="f.submitted && fromAccountNumber.invalid" class="invalid-feedback">
+          <div *ngIf="fromAccountNumber.errors.required">Title is required</div>
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
         <select [(ngModel)]="transaction.toAccountNumber" class="form-control" name="toAccountNumber"
           #toAccountNumber="ngModel" [ngClass]="{ 'is-invalid': f.submitted && toAccountNumber.invalid }" required>
           <option value=""></option>
-          <option *ngFor="let beneficiary of beneficiaries" value={{beneficiary.accountNo}}>{{beneficiary.accountNo}} :
+          <option *ngFor="let beneficiary of beneficiaries" value="{{beneficiary.accountNo}}">{{beneficiary.accountNo}} :
             {{beneficiary.beneficiaryName}} </option>
         </select>
         <div *ngIf="f.submitted && toAccountNumber.invalid" class="invalid-feedback">
