--- a/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
@@ -4,7 +4,7 @@
     <form (ngSubmit)="beneficiaryForm.valid && showDetails()" #beneficiaryForm="ngForm">
         <div class="form-group ">
             <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="Beneficiary name" [(ngModel)]=beneficiary.name #name="ngModel" required>
+            <input class="form-control" type="text" name="name" placeholder="Beneficiary name" [(ngModel)]=beneficiary.beneficiaryName #name="ngModel" required>
             <div class="alert alert-danger" *ngIf="beneficiaryForm.submitted && name.invalid && (name.dirty || name.touched)">
                 <div *ngIf="name.errors.required">Name is required</div>
             </div>
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label>Nickname</label>
-            <input class="form-control" type="text" name="nick" placeholder="Nickname is optional" [(ngModel)]=beneficiary.nickName
+            <input class="form-control" type="text" name="nick" placeholder="Nickname is optional" [(ngModel)]=beneficiary.beneficiaryNickName
                 #nick="ngModel">
         </div>
         <div class="form-group">
