--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
+<app-home></app-home>
 <div class="text-center">
   <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
@@ -67,7 +68,7 @@
   <br>
   <form (ngSubmit)="approvalForm.valid && approve()" #approvalForm="ngForm">
     <div class="form-group">
-      <label for="refNo">Service Reference No</label>
+      <label for="refNo">Service Reference No.</label>
       <input class="form-control" type="text" name="refNo" #refNo="ngModel" [(ngModel)]="adminApproval.serviceRefNo"
         required pattern="^[0-9]{4}$">
       <div class="alert alert-danger" *ngIf="approvalForm.submitted && refNo.invalid && (refNo.dirty || refNo.touched)">
@@ -85,6 +86,17 @@
         <div *ngIf="response.errors.pattern">Enter A or R</div>
       </div>
     </div>
+
+    <!-- <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Select Approval Response
+      </button>
+      <select class="dropdown-menu" [(ngModel)]="adminApproval.response">
+        <option class="dropdown-item" [ngValue]="A">A</option>
+        <option class="dropdown-item" [ngValue]="R">R</option>
+      </select>
+    </div> -->
+
     <div class="form-group">
       <input type="submit" class="btn btn-primary" value="Approve">
     </div>
