--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,8 +1,19 @@
-<div class="text-center">
-  <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
+<div class="header">
+  <a>HFDC Bank</a>
+  <a>Welcome, {{name | uppercase}}</a>
+  <div style="float: right;">
+    <a href="#" routerLink="/home">Home</a>
+    <a href="#" routerLink="/register-ib">Register for Internet Banking</a>
+    <a href="#" routerLink="/open-acc">Apply for Account</a>
+    <a href="#" routerLink="/track-application">Track</a>
+    <a href="#" routerLink="/admin-login">Admin Login</a>
+  </div>
 </div>
-<div class="h4">Welcome, {{name | uppercase}}</div>
-<div *ngIf="error">{{message}}</div>
+<!-- <div class="text-center">
+  <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
+</div> -->
+<!-- <div class="h4">Welcome, {{name | uppercase}}</div>
+<div *ngIf="error">{{message}}</div> -->
 <div class="scrollme">
   <table class="table table-striped table-bordered table-active table-responsive-md  text-nowrap">
     <thead style="background-color: #adb0c5;">
