added fund-transfer-status component

--- a/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/banking-frontend-angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -2,11 +2,7 @@
   <a>HFDC Bank</a>
   <a>Welcome, {{name | uppercase}}</a>
   <div style="float: right;">
-    <a href="#" routerLink="/home">Home</a>
-    <a href="#" routerLink="/register-ib">Register for Internet Banking</a>
-    <a href="#" routerLink="/open-acc">Apply for Account</a>
-    <a href="#" routerLink="/track-application">Track</a>
-    <a href="#" routerLink="/admin-login">Admin Login</a>
+    <a href="#" routerLink="/logout">Logout</a>
   </div>
 </div>
 <!-- <div class="text-center">
