change Password complete

--- a/banking-frontend-angular/src/app/change-password/change-password.component.html
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.html
@@ -1,26 +1,47 @@
 <app-dashboard></app-dashboard>
-<div class="wrapper container">
-    <div class="card border-dark w-100">
-            <div class="card-header">Set New Password</div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group ">
-                        <label>Enter old password</label>
-                        <input class="form-control" type="password" name="oldPassword">
-                    </div>
-                    <div class="form-group ">
-                        <label>Enter new password</label>
-                        <input class="form-control" type="password" name="password">
-                    </div>
-                    <div class="form-group">
-                        <label>Confirm New Password</label>
-                        <input name="confirmPassword" type="password" class="form-control">
-            
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" class="btn btn-primary" value="Submit" style="align-content: center;">
-                    </div>
-                </form>
+<div class="wrapper container center">
+    <p class="h3">Set Password</p>
+    <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" [appMustMatch]="['userPassword', 'cuserPassword' ,'txPassword', 'ctxPassword']" #f="ngForm">
+        <div class="form-group">
+            <label> Set Login Password</label>
+            <input class="form-control" type="password" name="userPassword" 
+            placeholder="Enter Password" [(ngModel)]="model.userPassword" #userPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8">
+            <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
+                <div *ngIf="userPassword.errors.required">Password is required</div>
+                <div *ngIf="userPassword.errors.minlength">Password must be at least 8 characters</div>
             </div>
-    </div>
-</div>
+        </div>
+        <div class="form-group">
+            <label> Confirm Login Password</label>
+            <input class="form-control" type="password" name="cuserPassword" 
+            placeholder="Enter Password" [(ngModel)]="model.cuserPassword"  #cuserPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && cuserPassword.invalid }" required>
+            <div *ngIf="f.submitted && cuserPassword.invalid" class="invalid-feedback">
+                <div *ngIf="cuserPassword.errors.required">Confirm Password is required</div>
+                <div *ngIf="cuserPassword.errors.mustMatch">Passwords must match</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label> Set Transaction Password</label>
+            <input class="form-control" type="password" name="txPassword" 
+            placeholder="Enter Password" [(ngModel)]="model.transactionPassword" #txPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && txPassword.invalid }" required minlength="4">
+            <div *ngIf="f.submitted && txPassword.invalid" class="invalid-feedback">
+                <div *ngIf="txPassword.errors.required">Password is required</div>
+                <div *ngIf="txPassword.errors.minlength">Password must be at least 4 characters</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label> Confirm Transaction Password</label>
+            <input class="form-control" type="password" name="ctxPassword" 
+            placeholder="Enter Password" [(ngModel)]="model.ctxPassword"  #ctxPassword="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && ctxPassword.invalid }" required>
+            <div *ngIf="f.submitted && ctxPassword.invalid" class="invalid-feedback">
+                <div *ngIf="ctxPassword.errors.required">Confirm Password is required</div>
+                <div *ngIf="ctxPassword.errors.mustMatch">Passwords must match</div>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
+    </form>
+  </div>
