--- a/banking-frontend-angular/src/app/fund-transfer-status/fund-transfer-status.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer-status/fund-transfer-status.component.html
@@ -2,12 +2,13 @@
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
 <div class="wrapper container" style="width: 46%; position: relative;">
-    <div class="h2">Your session has expired</div>
+    <div class="h2">Wohoo! Fund Transfer was Successful.</div>
+    <div class="h2">Ohn no! Fund Transfer Failed.</div>
     <br>
     <div class="h5">You were inactive for some time.</div>
     <br>
     <div style="margin-bottom: 3%;">
-        <a [routerLink]="['/login']"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
-        <a href="home.html"><button class="btn btn-success" type="submit">Back to Home</button></a>
+        <a [routerLink]="['/account-summary']"><button class="btn btn-primary" type="submit">Back to Dashboard</button></a>&nbsp;
+        <a [routerLink]="['/home']"><button class="btn btn-success" type="submit">Back to Home</button></a>
     </div>
 </div>
