fund transfer integration completed

--- a/banking-frontend-angular/src/app/account-statement/account-statement.component.html
+++ b/banking-frontend-angular/src/app/account-statement/account-statement.component.html
@@ -1,10 +1,10 @@
-<app-dashboard></app-dashboard>
-<div class="wrapper container transaction">
+<!--<app-dashboard></app-dashboard>
+<div class="wrapper container transaction">-->
   <!-- <ul class="list-group transaction" *ngFor="let transaction of transactions">
     <li class="list-group-item list-group-item-dark">{{transaction.transactionId}} {{transaction.txType | uppercase}} {{transaction.amount | currency : 'INR'}}
       {{transaction.date}} {{transaction.remarks}}</li>
   </ul> -->
-  <form (ngSubmit)="account-statementForm.valid && showDetails()" #accountStatementForm="ngForm"></form>
+ <!-- <form (ngSubmit)="account-statementForm.valid && showDetails()" #accountStatementForm="ngForm"></form>
   <div class="btn-group dropright" style="padding-bottom: 2%;">
     <button type="button" class="btn btn-secondary">
       Show last
@@ -41,4 +41,4 @@
       </tr>
     </tbody>
   </table>
-</div>
+</div>-->
