fund transfer frontend modified

--- a/banking-frontend-angular/src/app/fund-transfer-status/fund-transfer-status.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer-status/fund-transfer-status.component.html
@@ -2,17 +2,17 @@
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
 <div class="wrapper container" style="width: 46%; position: relative;">
-    <div class="h2" *ngIf="transactionStatus === 'SUCCESS'; else failureBlock">Wohoo! Fund Transfer was Successful.
-        <div>{{transactionId}}</div>
-        <div>{{fromAccountNumber}}</div>
-        <div>{{toAccountNumber}}</div>
-        <div>{{transactionAmount}}</div>
-        <div>{{transactionType}}</div>
-        <div>{{remarks}}</div>
+    <div class="h2" *ngIf="transactionStatus === 'SUCCESS' else failureBlock">Fund Transfer was Successful.
+        <div class="h4">TransactionId:{{transactionId}}</div>
+        <div class="h4">Sent From:{{fromAccountNumber}}</div>
+        <div class="h4">Sent To:{{toAccountNumber}}</div>
+        <div class="h4">Amount:{{transactionAmount}}</div>
+        <div class="h4">Transaction Type:{{transactionType}}</div>
+        <div class="h4">Transaction Remarks:{{remarks}}</div>
     </div>
-    <div class="h2" #failureBlock>Ohn no! Fund Transfer Failed.
+    <ng-template class="h2" #failureBlock>Ohn no! Fund Transfer Failed.
     <div>Please retry.</div>
-    </div>
+    </ng-template>
     <div style="margin-bottom: 3%;">
         <a [routerLink]="['/account-summary']"><button class="btn btn-primary" type="submit">Back to Dashboard</button></a>&nbsp;
         <a [routerLink]="['/home']"><button class="btn btn-success" type="submit">Back to Home</button></a>
