--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -86,27 +86,26 @@
       <div class="col-sm-8">
         <select [(ngModel)]="transaction.transactionType" class="form-control" name="transactionType"
           #transactionType="ngModel" [ngClass]="{ 'is-invalid': f.submitted && transactionType.invalid }" required>
-          <option value=""></option>
           <option value="IMPS"> IMPS </option>
           <option value="NEFT"> NEFT </option>
           <option value="RTGS"> RTGS </option>
         </select>
         <div *ngIf="f.submitted && transactionType.invalid" class="invalid-feedback">
-          <div *ngIf="transactionType.errors.required">Title is required</div>
+          <div *ngIf="transactionType.errors.required">Transaction Type is required</div>
         </div>
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-4"> From Account <span style="color:red">*</span></label>
       <div class="col-sm-8">
-        <select [(ngModel)]="transaction.fromAccountNumber" class="form-control" name="fromAccountNumber" #fromAccountNumber="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && fromAccountNumber.invalid }" required>
-          <option value=""></option>
+        <input type="" [(ngModel)]="transaction.fromAccountNumber" class="form-control" name="fromAccountNumber"
+         #fromAccountNumber="ngModel" placeholder="{{accountSummaryStatus.accountNumber}}" readonly>
+          <!--<option value=""></option>
           <option value="{{accountSummaryStatus.accountNumber}}"> {{accountSummaryStatus.accountNumber}} </option>
         </select>
         <div *ngIf="f.submitted && fromAccountNumber.invalid" class="invalid-feedback">
           <div *ngIf="fromAccountNumber.errors.required">Title is required</div>
-        </div>
+        </div>-->
       </div>
     </div>
     <div class="form-group row">
@@ -114,12 +113,12 @@
       <div class="col-sm-8">
         <select [(ngModel)]="transaction.toAccountNumber" class="form-control" name="toAccountNumber"
           #toAccountNumber="ngModel" [ngClass]="{ 'is-invalid': f.submitted && toAccountNumber.invalid }" required>
-          <option value=""></option>
+          <option value="add-beneficiary"><a>Click to add new beneficary</a></option>
           <option *ngFor="let beneficiary of beneficiaries" value="{{beneficiary.accountNo}}">{{beneficiary.accountNo}} :
             {{beneficiary.beneficiaryName}} </option>
         </select>
         <div *ngIf="f.submitted && toAccountNumber.invalid" class="invalid-feedback">
-          <div *ngIf="toAccountNumber.errors.required">Title is required</div>
+          <div *ngIf="toAccountNumber.errors.required">Account Number is required</div>
         </div>
       </div>
     </div>
@@ -157,7 +156,8 @@
     <div class="form-group row">
       <label class="col-sm-4"> Enter OTP</label>
       <div class="col-sm-8">
-        <input class="form-control" type="number" name="otp" placeholder="Enter  OTP">
+        <input class="form-control" type="number" name="otp" placeholder="Enter  OTP" [(ngModel)]="otp">
+        <button class="btn btn-link" (click)="onClick($event)">Generate otp</button>
       </div>
     </div>
 
