--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -154,13 +154,18 @@
       </div>
     </div>
     <div class="form-group row">
-      <label class="col-sm-4"> Enter OTP</label>
+      <label class="col-sm-4"> Enter OTP<span style="color:red">*</span></label>
       <div class="col-sm-8">
-        <input class="form-control" type="number" name="otp" placeholder="Enter  OTP" [(ngModel)]="otp">
+        <input class="form-control" type="text" name="otp" placeholder="Enter  OTP" 
+          [(ngModel)]="transaction.otp" #otp="ngModel" required minlength="4">
+       <div *ngIf="f.submitted && otp.invalid" class="invalid-feedback">  
+         <div *ngIf="otp.errors.minlength">OTP should of 4 digits</div> 
+        </div>
         <button class="btn btn-link" (click)="onClick($event)">Generate otp</button>
+        
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
+    <button [disabled]="!f.form.valid" type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
   </form>
 </div>
