--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -110,10 +110,9 @@
     </div>
     <div class="form-group row">
       <label class="col-sm-4"> To Account Number<span style="color:red">*</span></label>
-      <div class="col-sm-8">
+      <div class="col-sm-6">
         <select [(ngModel)]="transaction.toAccountNumber" class="form-control" name="toAccountNumber"
           #toAccountNumber="ngModel" [ngClass]="{ 'is-invalid': f.submitted && toAccountNumber.invalid }" required>
-          <option value="add-beneficiary"><a>Click to add new beneficary</a></option>
           <option *ngFor="let beneficiary of beneficiaries" value="{{beneficiary.accountNo}}">{{beneficiary.accountNo}} :
             {{beneficiary.beneficiaryName}} </option>
         </select>
@@ -121,6 +120,7 @@
           <div *ngIf="toAccountNumber.errors.required">Account Number is required</div>
         </div>
       </div>
+      <div class="col-sm-2"><button (click)="goToAddBeneficiary($event)"class="btn btn-primary">Add +</button></div>
     </div>
     <div class="form-group row">
       <label class="col-sm-4"> Amount<span style="color:red">*</span></label>
