--- a/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
@@ -1,6 +1,7 @@
 <app-dashboard></app-dashboard>
 <div class="wrapper container ben">
-    <table class="table table-striped table-active table-responsive-md">
+  <input type="button" value="Download PDF" (click)="captureScreen()"/>
+    <table id="contentToConvert" class="table table-striped table-active table-responsive-md">
       <thead style="background-color: #adb0c5;">
         <tr>
           <th scope="col">#</th>
