--- a/banking-frontend-angular/src/app/login/login.component.html
+++ b/banking-frontend-angular/src/app/login/login.component.html
@@ -37,6 +37,7 @@
     <p class="h3">Login</p>
     <br>
     <p>Please fill in your credentials to login.</p>
+    <div class="alert alert-danger" *ngIf="error">{{message}}</div>
     <form (ngSubmit)="loginForm.valid && loginCheck()" #loginForm="ngForm">
         <div class="form-group">
             <label for="userId">User ID</label>
@@ -62,3 +63,6 @@
         <p>Forgot Password? <a href="#" routerLink="/forgot-password">Click here</a>.</p>
     </div>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-scale-multiple">  
+    <p style="color: white">Please Wait. </p>  
+    </ngx-spinner> 
